# adl-robot_updates

./: CMakeLists.txt  README.md  app.json  babel.config.js  package.xml
android/app/: build.gradle
app/: +not-found.tsx  _layout.tsx  index.tsx  task.tsx
app/task/: 1.tsx  2.tsx  3.tsx
backend/: app.py
backend/routes/: objects.py  tasks.py  voice.py
backend/services/: detection.py  kinova_control.py  ros_bridge.py  task_library.py  task_state.py  voice_parsers.py
components/: Themed.tsx
components/tasks/: TaskStep.tsx
components/ui/accordion/: index.tsx
components/ui/actionsheet/: index.tsx
components/ui/alert/: index.tsx
components/ui/alert-dialog/: index.tsx
components/ui/avatar/: index.tsx
components/ui/badge/: index.tsx
components/ui/bottomsheet/: index.tsx
components/ui/button/: index.tsx
components/ui/card/: index.tsx  index.web.tsx  styles.tsx
components/ui/center/: index.tsx  index.web.tsx
components/ui/checkbox/: index.tsx
components/ui/divider/: index.tsx
components/ui/drawer/: index.tsx
components/ui/fab/: index.tsx
components/ui/form-control/: index.tsx
components/ui/gluestack-ui-provider/: config.ts
components/ui/grid/: index.tsx  index.web.tsx  styles.tsx
components/ui/heading/: index.tsx  index.web.tsx
components/ui/hstack/: index.tsx  index.web.tsx
components/ui/image/: index.tsx
components/ui/image-background/: index.tsx
components/ui/input/: index.tsx
components/ui/link/: index.tsx
components/ui/menu/: index.tsx
launch/: adl_robot.launch
ros_nodes/: kinova_api.py  task_executor.py
(+28 files in other folders)
